--- a/final/references.bib
+++ b/final/references.bib
@@ -113,6 +113,23 @@
   pages = {38--39}
 }
 
+@book{garey,
+  author={Garey, Michael R. and Johnson, David S},
+  title={Computers and Intractability: A Guide to the Theory of NP-Completeness},
+  publisher={W.H. Freeman and Company},
+  address={San Francisco},
+  year={1979}
+}
+
+@book{sipser,
+  author={Sipser, Michael},
+  title={Introduction to the Theory of Computation},
+  edition={\(3^{rd}\)},
+  publisher={Cengage Learning},
+  address={Boston, MA},
+  year={2013}
+}
+
 @book{zykov,
   title={On Some Properties of Linear Complexes},
   author={Zykov, Alexandre A.},
@@ -134,40 +151,6 @@
   month={June},
   year={1973},
   pages={372--378}
-}
-
-@book{dturing,
-  author={Turing, Dermot},
-  title={Prof: Alan Turing Decoded},
-  publisher={The History Press},
-  address={Stroud, Gloucestershire},
-  year={2015}
-}
-
-@article{aturing,
-  author={Turing, Alan M.},
-  title={On Computable Numbers, with an Application to the Entscheidungsproblem},
-  journal={Proceedings of the London Mathematical Society},
-  volume={42},
-  number={1},
-  year={1937},
-  pages={230--265}
-}
-  
-@book{bernhardt,
-  author={Bernhardt, Chris},
-  title={Turing's Vision: The Birth of Computer Science},
-  publisher={The MIT Press},
-  address={Cambridge, MA},
-  year={2016}
-}
-
-@book{garey,
-  author={Garey, Michael R. and Johnson, David S},
-  title={Computers and Intractability: A Guide to the Theory of NP-Completeness},
-  publisher={W.H. Freeman and Company},
-  address={San Francisco},
-  year={1979}
 }
 
 @article{bron,
